k8s/admission.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission
  namespace: couchbase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchbase-operator-admission
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: couchbase-operator-admission
    spec:
      containers:
      - args:
        - --logtostderr
        - --stderrthreshold
        - "0"
        - --tls-cert-file
        - /var/run/secrets/couchbase.com/couchbase-operator-admission/tls-cert-file
        - --tls-private-key-file
        - /var/run/secrets/couchbase.com/couchbase-operator-admission/tls-private-key-file
        command:
        - couchbase-operator-admission
        image: couchbase/admission-controller:2.1.0
        name: couchbase-operator-admission
        ports:
        - containerPort: 8443
          name: https
        readinessProbe:
          httpGet:
            path: /readyz
            port: https
            scheme: HTTPS
        resources: {}
        volumeMounts:
        - mountPath: /var/run/secrets/couchbase.com/couchbase-operator-admission
          name: couchbase-operator-admission
          readOnly: true
      serviceAccountName: couchbase-operator-admission
      volumes:
      - name: couchbase-operator-admission
        secret:
          secretName: couchbase-operator-admission
status: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission
  namespace: couchbase
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: couchbase-operator-admission
status:
  loadBalancer: {}

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJRENDQWdpZ0F3SUJBZ0lRRTVYKys5RFdVZzFHM3hIY29yOUlrVEFOQmdrcWhraUc5dzBCQVFzRkFEQXEKTVNnd0pnWURWUVFERXg5amIzVmphR0poYzJVdGIzQmxjbUYwYjNJdFlXUnRhWE56YVc5dUlFTkJNQjRYRFRJeApNREV3TmpFNE1EZ3lPVm9YRFRNeE1ERXdOREU0TURneU9Wb3dLakVvTUNZR0ExVUVBeE1mWTI5MVkyaGlZWE5sCkxXOXdaWEpoZEc5eUxXRmtiV2x6YzJsdmJpQkRRVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0MKQVFvQ2dnRUJBTncxK09zY0ZNQ3BTUHkzRUNpMFk5OUdTWW16UUhweVpPRWpESmE4L1pmRVUrZnpucURqd2xscgpVS3Z2YTJISzQ4K3 [...]
    service:
      name: couchbase-operator-admission
      namespace: couchbase
      path: /couchbaseclusters/mutate
  failurePolicy: Fail
  name: couchbase-operator-admission.couchbase.svc
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters
    - couchbasebuckets
    - couchbaseephemeralbuckets
    - couchbasememcachedbuckets
    - couchbasereplications
    - couchbaseusers
    - couchbasegroups
    - couchbaserolebindings
    - couchbasebackups
    - couchbasebackuprestores
    - couchbaseautoscalers
  sideEffects: None

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJRENDQWdpZ0F3SUJBZ0lRRTVYKys5RFdVZzFHM3hIY29yOUlrVEFOQmdrcWhraUc5dzBCQVFzRkFEQXEKTVNnd0pnWURWUVFERXg5amIzVmphR0poYzJVdGIzQmxjbUYwYjNJdFlXUnRhWE56YVc5dUlFTkJNQjRYRFRJeApNREV3TmpFNE1EZ3lPVm9YRFRNeE1ERXdOREU0TURneU9Wb3dLakVvTUNZR0ExVUVBeE1mWTI5MVkyaGlZWE5sCkxXOXdaWEpoZEc5eUxXRmtiV2x6YzJsdmJpQkRRVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0MKQVFvQ2dnRUJBTncxK09zY0ZNQ3BTUHkzRUNpMFk5OUdTWW16UUhweVpPRWpESmE4L1pmRVUrZnpucURqd2xscgpVS3Z2YTJISzQ4K3 [...]
    service:
      name: couchbase-operator-admission
      namespace: couchbase
      path: /couchbaseclusters/validate
  failurePolicy: Fail
  name: couchbase-operator-admission.couchbase.svc
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters
    - couchbasebuckets
    - couchbaseephemeralbuckets
    - couchbasememcachedbuckets
    - couchbasereplications
    - couchbaseusers
    - couchbasegroups
    - couchbaserolebindings
    - couchbasebackups
    - couchbasebackuprestores
    - couchbaseautoscalers
  sideEffects: None
