k8s/operator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission
  namespace: couchbase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchbase-operator-admission
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: couchbase-operator-admission
    spec:
      containers:
      - args:
        - --logtostderr
        - --stderrthreshold
        - "0"
        - --tls-cert-file
        - /var/run/secrets/couchbase.com/couchbase-operator-admission/tls-cert-file
        - --tls-private-key-file
        - /var/run/secrets/couchbase.com/couchbase-operator-admission/tls-private-key-file
        command:
        - couchbase-operator-admission
        image: couchbase/admission-controller:2.0.3
        name: couchbase-operator-admission
        ports:
        - containerPort: 8443
          name: https
        readinessProbe:
          httpGet:
            path: /readyz
            port: https
            scheme: HTTPS
        resources: {}
        volumeMounts:
        - mountPath: /var/run/secrets/couchbase.com/couchbase-operator-admission
          name: couchbase-operator-admission
          readOnly: true
      serviceAccountName: couchbase-operator-admission
      volumes:
      - name: couchbase-operator-admission
        secret:
          secretName: couchbase-operator-admission
status: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission
  namespace: couchbase
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: couchbase-operator-admission
status:
  loadBalancer: {}

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJVENDQWdtZ0F3SUJBZ0lSQU94THlZWEF6bDNPVnVINTRXc3drUFF3RFFZSktvWklodmNOQVFFTEJRQXcKS2pFb01DWUdBMVVFQXhNZlkyOTFZMmhpWVhObExXOXdaWEpoZEc5eUxXRmtiV2x6YzJsdmJpQkRRVEFlRncweQpNREV5TVRjd01ESTJOVFJhRncwek1ERXlNVFV3TURJMk5UUmFNQ294S0RBbUJnTlZCQU1USDJOdmRXTm9ZbUZ6ClpTMXZjR1Z5WVhSdmNpMWhaRzFwYzNOcGIyNGdRMEV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXcKZ2dFS0FvSUJBUUM3RHNsRHJOdWZhQ041QnplN2svL3ZzU1dJWkgxUkdKZlJEZFlOd3VyblRmKy9BQ3U5QjZ1QwpmVURnRmloeUs4cW [...]
    service:
      name: couchbase-operator-admission
      namespace: couchbase
      path: /couchbaseclusters/mutate
  name: couchbase-operator-admission.couchbase.svc
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters
    - couchbasebuckets
    - couchbaseephemeralbuckets
    - couchbasememcachedbuckets
    - couchbasereplications
    - couchbaseusers
    - couchbasegroups
    - couchbaserolebindings
    - couchbasebackups
    - couchbasebackuprestores

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: couchbase-operator-admission
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJVENDQWdtZ0F3SUJBZ0lSQU94THlZWEF6bDNPVnVINTRXc3drUFF3RFFZSktvWklodmNOQVFFTEJRQXcKS2pFb01DWUdBMVVFQXhNZlkyOTFZMmhpWVhObExXOXdaWEpoZEc5eUxXRmtiV2x6YzJsdmJpQkRRVEFlRncweQpNREV5TVRjd01ESTJOVFJhRncwek1ERXlNVFV3TURJMk5UUmFNQ294S0RBbUJnTlZCQU1USDJOdmRXTm9ZbUZ6ClpTMXZjR1Z5WVhSdmNpMWhaRzFwYzNOcGIyNGdRMEV3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXcKZ2dFS0FvSUJBUUM3RHNsRHJOdWZhQ041QnplN2svL3ZzU1dJWkgxUkdKZlJEZFlOd3VyblRmKy9BQ3U5QjZ1QwpmVURnRmloeUs4cW [...]
    service:
      name: couchbase-operator-admission
      namespace: couchbase
      path: /couchbaseclusters/validate
  name: couchbase-operator-admission.couchbase.svc
  rules:
  - apiGroups:
    - couchbase.com
    apiVersions:
    - v1
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - couchbaseclusters
    - couchbasebuckets
    - couchbaseephemeralbuckets
    - couchbasememcachedbuckets
    - couchbasereplications
    - couchbaseusers
    - couchbasegroups
    - couchbaserolebindings
    - couchbasebackups
    - couchbasebackuprestores

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: couchbase-operator
  namespace: couchbase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchbase-operator
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: couchbase-operator
    spec:
      containers:
      - args:
        - --pod-create-timeout=10m0s
        command:
        - couchbase-operator
        image: couchbase/operator:2.0.3
        name: couchbase-operator
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8383
          name: prometheus
        readinessProbe:
          httpGet:
            path: /readyz
            port: http
            scheme: HTTP
        resources: {}
      serviceAccountName: couchbase-operator
status: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: couchbase-operator
  namespace: couchbase
spec:
  ports:
  - name: http-pprof
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: http-prometheus
    port: 8383
    protocol: TCP
    targetPort: 8383
  selector:
    app: couchbase-operator
status:
  loadBalancer: {}
